Make search index required

--- a/specification.yml
+++ b/specification.yml
@@ -34,6 +34,7 @@ components:
         - uid
         - uri
         - title
+        - search_index
         properties:
           uid:
             type: string
